feat(event): add crud on event for admin (#8)
* feat(event): add crud on event for admin

* feat(user): update docs user
