# app/events/delivery/http/create_event.go
@@ -1,59 +1,0 @@
-package http
-
-import (
-	"encoding/json"
-	"io"
-	"net/http"
-
-	"github.com/hammer-code/lms-be/domain"
-	"github.com/hammer-code/lms-be/utils"
-	"github.com/sirupsen/logrus"
-)
-
-// CreateEvent
-// @Summary Create Event
-// @Description This endpoint create event
-// @Tags Event
-// @Accept json
-// @Produce json
-// @Param request body domain.CreateEventPayload true "Body"
-// @Failure 400 {object} domain.HttpResponse
-// @Failure 500 {object} domain.HttpResponse
-// @Success 200 {object} domain.HttpResponse
-// @Router /api/events [post]
-func (h Handler) CreateEvent(w http.ResponseWriter, r *http.Request) {
-	bodyBytes, err := io.ReadAll(r.Body)
-	if err != nil {
-		logrus.Error("failed to read body : ", err)
-		utils.Response(domain.HttpResponse{
-			Code:    500,
-			Message: err.Error(),
-		}, w)
-		return
-	}
-
-	var payload domain.CreateEventPayload
-	if err := json.Unmarshal(bodyBytes, &payload); err != nil {
-		logrus.Error("failed to unmarshal : ", err)
-		utils.Response(domain.HttpResponse{
-			Code:    500,
-			Message: err.Error(),
-		}, w)
-		return
-	}
-	err = h.usecase.CreateEvent(r.Context(), payload)
-	if err != nil {
-		logrus.Error("failed to Create event : ", err)
-		utils.Response(domain.HttpResponse{
-			Code:    500,
-			Message: err.Error(),
-		}, w)
-		return
-	}
-
-	utils.Response(domain.HttpResponse{
-		Code:    201,
-		Message: "success",
-		Data:    nil,
-	}, w)
-}
