# app/users/delivery/http/user.go
@@ -11,6 +11,38 @@ import (
 	"github.com/sirupsen/logrus"
 )
 
+// DeleteUser
+// @Summary Delete User
+// @Description This endpoint use to delete user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param id query string false "string"
+// @Failure 400 {object} domain.HttpResponse
+// @Failure 500 {object} domain.HttpResponse
+// @Success 200 {object} domain.HttpResponse
+// @Router /api/v1/users [delete]
+func (h Handler) DeleteUser(w http.ResponseWriter, r *http.Request) {
+	userIDStr := r.URL.Query().Get("id")
+	userID, _ := strconv.ParseUint(userIDStr, 10, 64)
+
+	err := h.usecase.DeleteUser(r.Context(), int8(userID))
+
+	if err != nil {
+		logrus.Error("userUsecase: failed to delete user")
+		utils.Response(domain.HttpResponse{
+			Code:    500,
+			Message: err.Error(),
+		}, w)
+		return
+	}
+
+	utils.Response(domain.HttpResponse{
+		Code:    200,
+		Message: "success",
+	}, w)
+}
+
 // GetUsers
 // @Summary Get Users
 // @Description This endpoint use to get users by filter
@@ -20,7 +52,7 @@ import (
 // @Failure 400 {object} domain.HttpResponse
 // @Failure 500 {object} domain.HttpResponse
 // @Success 200 {object} []domain.User
-// @Router /api/users [get]
+// @Router /api/v1/users [get]
 func (h Handler) GetUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := h.usecase.GetUsers(r.Context())
 
@@ -61,6 +93,15 @@ func (h Handler) GetUserById(w http.ResponseWriter, r *http.Request) {
 	}, w)
 }
 
+// @Summary Get User Profile
+// @Description This endpoint use to get current user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Failure 400 {object} domain.HttpResponse
+// @Failure 500 {object} domain.HttpResponse
+// @Success 200 {object} domain.User
+// @Router /api/v1/users [get]
 func (h Handler) GetUserProfile(w http.ResponseWriter, r *http.Request) {
 	authorizationHeader := r.Header.Get("Authorization")
 	if authorizationHeader == "" {
